# CHIP-8_Emulator

./: .gitmodules  CHIP-8_Emulator.sln  CHIP8_Emu.sln  CMakeLists.txt  CMakeSettings.json  readme.md
.github/workflows/: CHIP8_Emu.yml
CHIP-8_Emulator/: CHIP-8_Emulator.csproj  CPU.cs  Form1.Designer.cs  Form1.cs  Program.cs
CHIP-8_Emulator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CHIP8_Emu/: CHIP8_Emu.vcxproj  CHIP8_Emu.vcxproj.filters  CMakeLists.txt  chip8.cpp  cpu.hpp  hal.hpp  main.cpp  utils.hpp
CHIP8_Emu/include/: bus.hpp  chip8.hpp  constants.hpp  types.hpp
CHIP8_Emu/src/: bus.cpp  chip8.cpp  cpu.cpp  main.cpp  utils.cpp
